# cimba

./: .clang-format  .clangd  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  NOTICE  README.md  meson.build  meson_options.txt  setup_MinGW.bat
.github/workflows/: ci.yml
benchmark/: .~lock.AMD Threadripper 3970x.ods#  AMD Threadripper 3970x.ods  AMD_Threadripper_3970x.ods  MM1_multi.c  MM1_multi.py  MM1_single.c  MM1_single.py  meson.build
code_reviews/: 20260610 Cimba code review by Claude Fable 5 extra.md  20260615 Cimba verification review by Claude Opus 4.8 extra.md  20260617 Cimba code review by Claude Opus 4.8 extra.md  20260618 Cimba verification review by Claude Opus 4.8 extra.md
codegen/: calc.h  calc_exponential.c  calc_normal.c  calc_utils.c  cmi_calc.h  cmi_calc_exp.c  cmi_calc_exponential.c  cmi_calc_normal.c  cmi_calc_utils.c  meson.build
config/: AddToEnv.ps1  mingw.ini
docs/: API reference.rst  API_reference.rst  CMakeLists.txt  Doxyfile  Doxyfile.in  background.rst  conf.py  conf.py.in  getting_started.rst  index.md  index.rst  installation.rst  meson.build  requirements.txt  tutorial.rst  welcome.rst
docs/static/: custom.css
images/: .~lock.stack illustrations.odg#  stack illustrations.odg
include/: cimba.h  cmb_assert.h  cmb_buffer.h  cmb_condition.h  cmb_config.h  cmb_coroutine.h  cmb_data.h  cmb_dataset.h  cmb_datasummary.h  cmb_event.h  cmb_holdable.h  cmb_logger.h  cmb_mempool.h  cmb_objectqueue.h  cmb_priorityqueue.h  cmb_process.h  cmb_queue.h  cmb_random.h  cmb_resource.h  cmb_resourcebase.h  cmb_resourceguard.h  cmb_resourcepool.h  cmb_resourcestore.h  cmb_store.h  cmb_timeseries.h  cmb_wtdsummary.h  cmi_config.h  cmi_coroutine.h  cmi_memutils.h  meson.build
resources/: smi_calc_exp.c
src/: cimba.c  cmb_assert.c  cmb_buffer.c  cmb_condition.c  cmb_coroutine.c  cmb_data.c  cmb_dataset.c  cmb_datasummary.c  cmb_event.c  cmb_holdable.c  cmb_logger.c  cmb_mempool.c  cmb_objectqueue.c  cmb_priorityqueue.c  cmb_process.c  cmb_queue.c  cmb_random.c  cmb_resource.c  cmb_resourcebase.c  cmb_resourceguard.c  cmb_resourcepool.c  cmb_resourcestore.c  cmb_store.c  cmb_timeseries.c  cmb_wtdsummary.c  cmi_config.h  cmi_coroutine.c  cmi_coroutine.h  cmi_dataset.h  cmi_hashheap.c  cmi_hashheap.h  cmi_holdable.c  cmi_holdable.h  cmi_list.h  cmi_mempool.c  cmi_mempool.h  cmi_memutils.h  cmi_pool.c  cmi_pool.h  cmi_process.h  (+14 more)
src/arch/: cmb_random_hwseed_Win64.c  cmi_coroutine_context_Win64.asm  cmi_coroutine_context_Win64.c  cmi_cpu_cores_Win64.c  cmi_memutils_Win64.c  cmi_random_hwseed_Win64.asm
src/codegen/: cmi_calc.h  cmi_calc_exp.c  cmi_calc_nor.c
src/port/: meson.build
src/port/x86-64/: meson.build
src/port/x86-64/Linux/: cmb_random_hwseed.c  cmi_coroutine_context.c  cmi_memutils.c  cmi_random_hwseed.asm  meson.build
src/port/x86-64/Windows/: cmb_random_hwseed.c  cmi_coroutine_context.asm
src/port/x86-64/linux/: cmb_random_hwseed.c  cmi_coroutine_context.asm  cmi_coroutine_context.c  cmi_cpu_cores.c  cmi_memutils.c  cmi_random_hwseed.asm  meson.build
src/port/x86-64/windows/: cmb_random_hwseed.c  cmi_coroutine_context.asm  cmi_coroutine_context.c  cmi_cpu_cores.c  cmi_memutils.c  cmi_random_hwseed.asm  meson.build
src/test/: cmi_test.h  cmi_test_data.c  cmi_test_event.c  cmi_test_logger.c  cmi_test_random.c
test/: cmi_config.c  cmi_test.h  cmi_test_buffer.c  cmi_test_coroutine.c  cmi_test_data.c  cmi_test_event.c  cmi_test_hashheap.c  cmi_test_logger.c  cmi_test_mempool.c  cmi_test_process.c  cmi_test_queue.c  cmi_test_random.c  cmi_test_resource.c  cmi_test_store.c  meson.build  random_crossplot.c  sm_test_zig.c  test_assert.c  test_assert.py  test_buffer.c  test_cimba.c  test_condition.c  test_coroutine.c  test_data.c  test_event.c  test_hashheap.c  test_logger.c  test_mempool.c  test_objectqueue.c  test_priorityqueue.c  test_process.c  test_pthreads.c  test_queue.c  test_random.c  test_resource.c  test_resourceguard.c  test_resourcepool.c  test_resourcestore.c  test_store.c
test/reference/: buffer.txt  cimba.txt  condition.txt  data.txt  event.txt  hashheap.txt  objectqueue.txt  priorityqueue.txt  random.txt  resource.txt  resourceguard.txt  resourcepool.txt
test/tools/: test_stochastic.py  verify_install.sh
tutorial/: hello.c  meson.build  tut_1_1.c  tut_1_2.c  tut_1_3.c  tut_1_4.c  tut_1_5.c  tut_1_6.c  tut_1_7.c  tut_1_x.c  tut_2_0.c  tut_2_1.c  tut_2_2.c  tut_3_1.c  tut_4_1.c  tut_4_2.c  tut_5.pvsm  tut_5_1.c  tut_5_2.c  tut_5_2.cu  tut_5_2.h  tut_5_3.c  tut_5_3.cu  tut_5_3.h
tutorials/: hello.c  tutorial_1.c
