# include/meson.build

inc_api = include_directories('.')

# Public API headers - installed to /usr/local/include
install_headers(
    'cimba.h',
    'cmb_assert.h',
    'cmb_buffer.h',
    'cmb_condition.h',
    'cmb_dataset.h',
    'cmb_datasummary.h',
    'cmb_event.h',
    'cmb_logger.h',
    'cmb_objectqueue.h',
    'cmb_priorityqueue.h',
    'cmb_process.h',
    'cmb_random.h',
    'cmb_resource.h',
    'cmb_resourceguard.h',
    'cmb_resourcepool.h',
    'cmb_timeseries.h',
    'cmb_wtdsummary.h'
)